fix card pattern on mobile

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -37,7 +37,7 @@
 
   .card-body {
     border-top: 0;
-    padding: $base-spacing $double-spacing;
+    padding: 0 $double-spacing $base-spacing;
 
     .btn {
       margin-bottom: $base-spacing;
